--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 /build/
 
 *storybook.log
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+.env.local
