--- a/.chromatic.playwright.config.json
+++ b/.chromatic.playwright.config.json
@@ -4,5 +4,6 @@
     "autoAcceptChanges": "main",
     "exitOnceUploaded": true,
     "externals": ["public/**"],
-    "onlyChanged": true
+    "onlyChanged": true,
+    "playwright": true
 }
