--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -46,6 +46,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0
+        - uses: actions/setup-node@v4
+          with:
+            node-version: 22.12.0
+        - uses: pnpm/action-setup@v3
+        - name: Install dependencies
+          run: pnpm install
         - name: Download Playwright test results
           uses: actions/download-artifact@v4
           with:
