--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,7 @@
 name: 'E2e Tests'
 on:
   workflow_dispatch:
+  pull_request:
   push:
     branches:
       - main
@@ -18,9 +19,15 @@ jobs:
       - uses: volta-cli/action@v4
       - name: Install Dependencies
         run: pnpm install
+      - name: Component tests
+        uses: chromaui/action@latest
+        with:
+          projectToken: ${{ secrets.CHROMATIC_COMPONENT_TOKEN }}
+          configFile: .chromatic.config.json
       - name: Install Playwright
         run: pnpm exec playwright install --with-deps
       - name: Build
         run: pnpm build
       - name: Test
         run: pnpm test:e2e
+
